--- a/init.org
+++ b/init.org
@@ -403,6 +403,23 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
   "
   )
 
+  (setq org-agenda-custom-commands
+        '(("h" "Work todos" tags-todo
+           "-personal-doat={.+}-dowith={.+}/!-TASK"
+           ((org-agenda-todo-ignore-scheduled t)))
+          ("H" "All work todos" tags-todo "-personal/!-TASK-MAYB"
+           ((org-agenda-todo-ignore-scheduled nil)))
+          ("A" "Work todos with doat or dowith" tags-todo
+           "-personal+doat={.+}|dowith={.+}/!-TASK"
+           ((org-agenda-todo-ignore-scheduled nil)))
+          ("j" "TODO dowith and TASK with"
+           ((org-sec-with-view "TODO dowith")
+            (org-sec-where-view "TODO doat")
+            (org-sec-assigned-with-view "TASK with")
+            (org-sec-stuck-with-view "STUCK with")))
+          ("J" "Interactive TODO dowith and TASK with"
+           ((org-sec-who-view "TODO dowith")))))
+
   (setq akt/org-capture-todo-template
   "* TODO %?
   %U
