--- a/init.org
+++ b/init.org
@@ -268,6 +268,7 @@ the checking happens for all pairs in auto-minor-mode-alist"
 
 #+end_src
 * Org Mode Setup
+Babel languages: gnuplot and dot
 #+begin_src emacs-lisp
   (org-babel-do-load-languages
    'org-babel-load-languages
@@ -311,7 +312,8 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
     (setq org-directory akt/icloud-directory)
     (add-hook 'org-mode-hook (lambda () (auto-revert-mode 1)))
     (setq org-refile-targets (list (cons akt/agenda-versame '(:maxlevel . 2))))
-
+    (setq org-enforce-todo-dependencies t)
+    (setq org-agenda-dim-blocked-tasks 'invisible)
 #+END_SRC
 
 #+begin_src emacs-lisp
