add SQL to babel
M-* is for pop-tag-mark

--- a/init.org
+++ b/init.org
@@ -290,6 +290,7 @@ Babel languages: gnuplot and dot
    'org-babel-load-languages
    '((gnuplot . t)
      (dot . t)
+     (sql . t)
     )
    )
 #+end_src
