--- a/init.org
+++ b/init.org
@@ -632,7 +632,7 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 ;;(key-chord-define-global "FF" 'clang-format)
 (key-chord-define-global "nm" 'neotree-toggle)
 (key-chord-define-global "cm" 'compile)
-(key-chord-define-global "dm" 'gdb)
+;;(key-chord-define-global "dm" 'gdb)
 #+END_SRC
 ** Org Mode
 #+BEGIN_SRC emacs-lisp
