--- a/init.org
+++ b/init.org
@@ -17,10 +17,11 @@ Try to save customized values somewhere other than in the main init file
 (require 'package)
 (package-initialize)
 (setq package-archives
- '(("ELPA"      . "http://tromey.com/elpa/")
-   ("gnu"       . "http://elpa.gnu.org/packages/")
-   ("melpa"     . "http://melpa.milkbox.net/packages/")
-   ("marmalade" . "http://marmalade-repo.org/packages")))
+ '(;;("ELPA"      . "http://tromey.com/elpa/")
+   ("gnu"       . "https://elpa.gnu.org/packages/")
+   ("melpa"     . "https://melpa.milkbox.net/packages/")
+   ;;("marmalade" . "http://marmalade-repo.org/packages")
+))
 #+END_SRC
 ** Load Paths
 #+BEGIN_SRC emacs-lisp
@@ -624,6 +625,14 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
  #+begin_src emacs-lisp
 (setq org-reveal-root "http://cdn.jsdelivr.net/reveal.js/3.0.0/")
  #+end_src
+** multiple cursors
+#+begin_src emacs-lisp
+(require 'multiple-cursors)
+    (global-set-key (kbd "C-S-c C-S-c") 'mc/edit-lines)
+    (global-set-key (kbd "C->") 'mc/mark-next-like-this)
+    (global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
+    (global-set-key (kbd "C-c C-<") 'mc/mark-all-like-this)
+#+end_src
 * Keyboard Bindings
 ** Key Chords
 #+BEGIN_SRC emacs-lisp
@@ -765,4 +774,52 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
         starttls-gnutls-program "/opt/local/bin/gnutls-cli"
         starttls-extra-arguments nil
         starttls-use-gnutls t)
+#+end_src
+* C/C++ development tools
+** CEDET (unused)
+#+begin_src emacs-lisp-unused
+(add-to-list 'semantic-default-submodes 'global-semantic-mru-bookmark-mode)
+(add-to-list 'semantic-default-submodes 'global-semanticdb-minor-mode)
+(add-to-list 'semantic-default-submodes 'global-semantic-idle-scheduler-mode)
+(add-to-list 'semantic-default-submodes 'global-semantic-stickyfunc-mode)
+(add-to-list 'semantic-default-submodes 'global-semantic-m3-mode)
+(add-to-list 'semantic-default-submodes 'global-semantic-highlight-func-mode)
+(add-to-list 'semantic-default-submodes 'global-semanticdb-minor-mode)
+
+(semantic-mode 1)
+#+end_src
+** Irony
+#+begin_src emacs-lisp
+    (add-hook 'c++-mode-hook 'irony-mode)
+    (add-hook 'c++-mode-hook 'company-mode)
+    (add-hook 'c-mode-hook 'irony-mode)
+    (add-hook 'c-mode-hook 'company-mode)
+    (add-hook 'objc-mode-hook 'irony-mode)
+
+    (defun akt:irony-mode-hook ()
+      (define-key irony-mode-map [remap completion-at-point]
+        'irony-completion-at-point-async)
+      (define-key irony-mode-map [remap complete-symbol]
+        'irony-completion-at-point-async))
+
+    (add-hook 'irony-mode-hook 'akt:irony-mode-hook)
+    (add-hook 'irony-mode-hook 'irony-cdb-autosetup-compile-options)
+
+    (eval-after-load 'company
+      '(add-to-list 'company-backends 'company-irony))
+    (add-hook 'irony-mode-hook 'company-irony-setup-begin-commands)
+
+    (when (boundp 'w32-pipe-read-delay)
+      (setq w32-pipe-read-delay 0))
+    ;; Set the buffer size to 64K on Windows (from the original 4K)
+    (when (boundp 'w32-pipe-buffer-size)
+      (setq irony-server-w32-pipe-buffer-size (* 64 1024)))
+
+    (add-hook 'after-init-hook 'global-company-mode)
+
+    (eval-after-load 'company
+      '(add-to-list 'company-backends 'company-irony))
+
+    (global-set-key [C-tab] 'company-complete)
+
 #+end_src
