--- a/init.org
+++ b/init.org
@@ -314,6 +314,7 @@ Babel languages: gnuplot and dot
 
 Org mode data is saved within an iCloud directory so that it'll be replicated to all my machines.
 #+BEGIN_SRC emacs-lisp
+  (setq akt/agenda-avegant (akt/icloud-path "avegant.org"))
   (setq akt/agenda-versame (akt/icloud-path "versame.org"))
   (setq akt/agenda-panamint (akt/icloud-path "panamint.org"))
   (setq akt/gtd (akt/icloud-path "gtd.org"))
@@ -322,6 +323,11 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 #+END_SRC 
 
 #+begin_src emacs-lisp
+  (defun avegant ()
+    "Begin working on Avegant tasks"
+    (interactive)
+    (switch-to-buffer (find-file-noselect akt/agenda-avegant)))
+
   (defun gtd ()
     "Getting Things Done"
     (interactive)
@@ -337,6 +343,7 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
 #+BEGIN_SRC emacs-lisp
   (setq org-agenda-files (list
                           org-default-notes-file
+                          akt/agenda-avegant
                           akt/agenda-versame
                           akt/agenda-panamint
                           akt/gtd))
