--- a/init.org
+++ b/init.org
@@ -211,6 +211,7 @@ All elements of this alist are checked, meaning you can enable multiple minor mo
         ("\\.bin$"         . hexl-mode)
         ("\\.swift$"       . swift-mode)
         ("\\.yaml  "       . yaml-mode)
+        ("\\.html?\\'"     . web-mode)
         )) auto-mode-alist))
 
 (defun enable-minor-mode-based-on-extension ()
