--- a/init.org
+++ b/init.org
@@ -518,7 +518,7 @@ Org mode data is saved within an iCloud directory so that it'll be replicated to
   (magit-add-section-hook 'magit-status-sections-hook
                           'magit-insert-modules-overview
                           'magit-insert-unpulled-from-upstream))
-
+(magit-todos-mode)
 (require 'git-blame)
 #+END_SRC
 ** Fill Column
